2014-04-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/compiler.boot: Allow specifing return type
	for nulary anonymous functions.

2014-04-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/mantepse.spad.pamphlet: De-hunkify.

2014-03-31  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/compiler.boot: Let overload resolution make
	choice between variables and literals.
	src/algebra/scene.spad.pamphlet,
	src/algebra/tree.spad.pamphlet,
	src/algebra/pattern.spad.pamphlet,
	src/algebra/integer.spad.pamphlet,
	src/algebra/view3D.spad.pamphlet,
	src/algebra/view2D.spad.pamphlet,
	src/algebra/graph.spad.pamphlet: Adjust.

2014-03-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/outform.spad.pamphlet: Remove useless exports.

2014-03-26  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/int-top.boot: Fix 'ncloopEscaped'.

2014-03-26  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/rep2.spad.pamphlet,
	src/algebra/groebf.spad.pamphlet: Stop using 'autoCoerce'
	in algebra.

2014-03-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/compiler.boot: Prefer String as argument
	type of 'error', report type errors when compiling
	to OutputForm.
	src/algebra/color.spad.pamphlet,
	src/algebra/outform.spad.pamphlet,
	src/algebra/fortran.spad.pamphlet,
	src/algebra/solvefor.spad.pamphlet,
	src/algebra/openmath.spad.pamphlet,
	src/algebra/jet.spad.pamphlet,
	src/algebra/array2.spad.pamphlet: Adjust.

2014-03-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/fortran.spad.pamphlet,
	src/algebra/forttyp.spad.pamphlet,
	src/algebra/Makefile.in,
	src/algebra/fortpak.spad.pamphlet,
	src/interp/newfort.boot: Partial cleanup of Fortran
	generating code.

2014-03-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/rinterp.spad.pamphlet,
	src/algebra/rec.spad.pamphlet: De-hunkify.

2014-03-24  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/etc/Makefile.in, src/etc/gen-cpl.lisp:  Generate