@@ -1,5 +1,9 @@
 2014-04-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/hyper/spadint.c: Fix buffer overflow.
+
+2014-04-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/interp/compiler.boot: Allow specifing return type
 	for nulary anonymous functions.
 
